LU-1563 quota: Put lqs properly in quota_pending_commit()

In quota_pending_commit(), always check if pending > 0 to figure
out if a lqs is held from quota_check_common(), otherwise, we
could find a lqs in quota_pending_commit(), then put it twice.

Signed-off-by: Niu Yawei <niu@whamcloud.com>
Change-Id: Ia653f41d721c002bbfbebcaf688b9943dde256bf
Reviewed-on: http://review.whamcloud.com/3187
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Johann Lombardi <johann@whamcloud.com>
Reviewed-by: Fan Yong <yong.fan@whamcloud.com>